--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SaumyaMakkar/Web-Information-Tech-Team#readme",
   "dependencies": {
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.4",
     "mongoose": "^6.2.10"
