--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon app"
+    "server": "nodemon app",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
