--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://diabetes_user:diabetes_user@ausdev.iom05.mongodb.net/diabetes_at_home
+SESSION_SECRET=VeryC@mplexSessi@nSecret
