--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
   },
   "homepage": "https://github.com/SaumyaMakkar/Web-Information-Tech-Team#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "chart.js": "^3.7.1",
+    "connect-mongo": "^4.6.0",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.4",
-    "mongoose": "^6.2.10"
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.10",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
