--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.4",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.10"
   },
   "devDependencies": {
