--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.4",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.2.10",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
